logs/tkpickacolor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tkPickaColor'...
Compiling './lib/python3.5/site-packages/tkPickaColor/classpoint.py'...
***   File "./lib/python3.5/site-packages/tkPickaColor/classpoint.py", line 34
    print p
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tkPickaColor/test_enter.py'...
***   File "./lib/python3.5/site-packages/tkPickaColor/test_enter.py", line 63
    print self.local_hue,  self.local_val
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tkPickaColor/tkinterhelpers.py'...
***   File "./lib/python3.5/site-packages/tkPickaColor/tkinterhelpers.py", line 96
    print 'ok '* 10
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tkPickaColor/tkpickacolor.py'...
***   File "./lib/python3.5/site-packages/tkPickaColor/tkpickacolor.py", line 526
    print askColors()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tkPickaColor-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
